# Nova2FA

./: .coveragerc  .gitignore  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TESTING Linux.md  TESTING Windows.md  TESTING.md  TESTING_WINDOWS.md  conftest.py  index.html  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.cfg
api-reference/: index.html
configuration/: index.html
customization/: index.html
docs/: mkdocs.yml
docs/docs/: api-reference.md  configuration.md  customization.md  index.md  installation.md  quickstart.md  security.md
example_project/: README.md
example_project/accounts/: admin.py  models.py  views.py
example_project/accounts/templates/accounts/: login.html  profile.html  register.html
example_project/example_project/: asgi.py  settings.py  urls.py
example_project/templates/: base.html  home.html
installation/: index.html
nova2fa/: __init__.py  admin.py  apps.py  conf.py  encryption.py  forms.py  middleware.py  models.py  registry.py  signals.py  urls.py  utils.py  views.py
nova2fa/methods/: __init__.py  backup_codes.py  base.py  email_otp.py  totp.py
nova2fa/templates/nova2fa/: backup_codes.html  base_2fa.html  change_method.html  disable.html  locked.html  settings.html  setup.html  setup_totp.html  verify.html  verify_email_otp.html
nova2fa/templates/nova2fa/emails/: base_email.html  otp_email.html
quickstart/: index.html
search/: search_index.json
security/: index.html
tests/: conftest.py  test_encryption.py  test_methods.py  test_models.py  test_placeholder.py
