[metadata]
name = nova2fa
version = attr: nova2fa.__version__
description = A flexible, production-ready Two-Factor Authentication (2FA) package for Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brandnova/Nova2FA
author = Ijeoma Jahsway
author_email = brandnova89@gmail.com
license = BSD-3-Clause
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Security

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Django>=4.2
    pyotp>=2.9.0